Add pouvoirs actions

--- a/index.html
+++ b/index.html
@@ -11,45 +11,6 @@
     </head>
     <style id="kamehamehatouched">
     </style>
-    <style id="pouvoir1">
-    </style>
-    <style id="pouvoir2">
-    </style>
-    <style id="pouvoir3">
-    </style>
-    <style id="pouvoir4">
-    </style>
-    <style id="pouvoir5">
-    </style>
-    <style id="pouvoir6">
-    </style>
-    <style id="pouvoir7">
-    </style>
-    <style id="pouvoir8">
-    </style>
-    <style id="pouvoir9">
-    </style>
-    <style id="pouvoir10">
-    </style>
-    <style id="pouvoirjiren1">
-    </style>
-    <style id="pouvoirjiren2">
-    </style>
-    <style id="pouvoirjiren3">
-    </style>
-    <style id="pouvoirjiren4">
-    </style>
-    <style id="pouvoirjiren5">
-    </style>
-    <style id="pouvoirjiren6">
-    </style>
-    <style id="pouvoirjiren7">
-    </style>
-    <style id="pouvoirjiren8">
-    </style>
-    <style id="pouvoirjiren9">
-    </style>
-    <style id="pouvoirjiren10">
     </style>
     <style id="kamehamehastyle">
     </style>
@@ -72,8 +33,6 @@
         <div id="goku">
             <img style="display: inline;" id="gokugaucheinitial" src="perso/gauchegoku/initial.png" alt=""/>
             <img id="gokugaucheblue" src="perso/gauchegoku/blue.png" alt=""/>
-            <img id="gokugaucheblueairkamehamehachargement" src="perso/gauchegoku/blueairkamehamehachargement.png" alt=""/>
-            <img id="gokugaucheblueairpouvoir" src="perso/gauchegoku/blueairpouvoir.png" alt=""/>
             <img id="gokugaucheblueairtransformation" src="perso/gauchegoku/blueairtransformation.png" alt=""/>
             <img id="gokugaucheblueavance" src="perso/gauchegoku/blueavance.png" alt=""/>
             <img id="gokugaucheblueblock" src="perso/gauchegoku/blueblock.png" alt=""/>
@@ -93,8 +52,6 @@
             <img id="gokugauchebluetouchedtop" src="perso/gauchegoku/bluetouchedtop.png" alt=""/>
             <img id="gokugauchebluetransformation" src="perso/gauchegoku/bluetransformation.png" alt=""/>
             <img id="gokugauchegod" src="perso/gauchegoku/god.png" alt=""/>
-            <img id="gokugauchegodairkamehamehachargement" src="perso/gauchegoku/godairkamehamehachargement.png" alt=""/>
-            <img id="gokugauchegodairpouvoir" src="perso/gauchegoku/godairpouvoir.png" alt=""/>
             <img id="gokugauchegodairtransformation" src="perso/gauchegoku/godairtransformation.png" alt=""/>
             <img id="gokugauchegodavance" src="perso/gauchegoku/godavance.png" alt=""/>
             <img id="gokugauchegodblock" src="perso/gauchegoku/godblock.png" alt=""/>
@@ -113,8 +70,6 @@
             <img id="gokugauchegodtouchedmiddle" src="perso/gauchegoku/godtouchedmiddle.png" alt=""/>
             <img id="gokugauchegodtouchedtop" src="perso/gauchegoku/godtouchedtop.png" alt=""/>
             <img id="gokugauchegodtransformation" src="perso/gauchegoku/godtransformation.png" alt=""/>
-            <img id="gokugaucheinitialairkamehamehachargement" src="perso/gauchegoku/initialairkamehamehachargement.png" alt=""/>
-            <img id="gokugaucheinitialairpouvoir" src="perso/gauchegoku/initialairpouvoir.png" alt=""/>
             <img id="gokugaucheinitialairtransformation" src="perso/gauchegoku/initialairtransformation.png" alt=""/>
             <img id="gokugaucheinitialavance" src="perso/gauchegoku/initialavance.png" alt=""/>
             <img id="gokugaucheinitialblock" src="perso/gauchegoku/initialblock.png" alt=""/>
@@ -135,8 +90,6 @@
             <img id="gokugaucheinitialtransformation" src="perso/gauchegoku/initialtransformation.png" alt=""/>
             <img id="gokudroiteinitial" src="perso/droitegoku/initial.png" alt=""/>
             <img id="gokudroiteblue" src="perso/droitegoku/blue.png" alt=""/>
-            <img id="gokudroiteblueairkamehamehachargement" src="perso/droitegoku/blueairkamehamehachargement.png" alt=""/>
-            <img id="gokudroiteblueairpouvoir" src="perso/droitegoku/blueairpouvoir.png" alt=""/>
             <img id="gokudroiteblueairtransformation" src="perso/droitegoku/blueairtransformation.png" alt=""/>
             <img id="gokudroiteblueavance" src="perso/droitegoku/blueavance.png" alt=""/>
             <img id="gokudroiteblueblock" src="perso/droitegoku/blueblock.png" alt=""/>
@@ -156,8 +109,6 @@
             <img id="gokudroitebluetouchedtop" src="perso/droitegoku/bluetouchedtop.png" alt=""/>
             <img id="gokudroitebluetransformation" src="perso/droitegoku/bluetransformation.png" alt=""/>
             <img id="gokudroitegod" src="perso/droitegoku/god.png" alt=""/>
-            <img id="gokudroitegodairkamehamehachargement" src="perso/droitegoku/godairkamehamehachargement.png" alt=""/>
-            <img id="gokudroitegodairpouvoir" src="perso/droitegoku/godairpouvoir.png" alt=""/>
             <img id="gokudroitegodairtransformation" src="perso/droitegoku/godairtransformation.png" alt=""/>
             <img id="gokudroitegodavance" src="perso/droitegoku/godavance.png" alt=""/>
             <img id="gokudroitegodblock" src="perso/droitegoku/godblock.png" alt=""/>
@@ -176,8 +127,6 @@
             <img id="gokudroitegodtouchedmiddle" src="perso/droitegoku/godtouchedmiddle.png" alt=""/>
             <img id="gokudroitegodtouchedtop" src="perso/droitegoku/godtouchedtop.png" alt=""/>
             <img id="gokudroitegodtransformation" src="perso/droitegoku/godtransformation.png" alt=""/>
-            <img id="gokudroiteinitialairkamehamehachargement" src="perso/droitegoku/initialairkamehamehachargement.png" alt=""/>
-            <img id="gokudroiteinitialairpouvoir" src="perso/droitegoku/initialairpouvoir.png" alt=""/>
             <img id="gokudroiteinitialairtransformation" src="perso/droitegoku/initialairtransformation.png" alt=""/>
             <img id="gokudroiteinitialavance" src="perso/droitegoku/initialavance.png" alt=""/>
             <img id="gokudroiteinitialblock" src="perso/droitegoku/initialblock.png" alt=""/>
@@ -199,26 +148,7 @@
         </div>
         <div id="jiren">
             <img style="display: inline;" id="jirendroiteinitial" src="perso/droitejiren/initial.png" alt=""/>
-            <img id="jirengaucheinitialairpouvoir" src="perso/gauchejiren/initialairpouvoir.png" alt=""/>
-            <img id="jirengaucheinitialairtransformation" src="perso/gauchejiren/initialairtransformation.png" alt=""/>
-            <img id="jirengaucheinitialair" src="perso/gauchejiren/initialair.png" alt=""/>
-            <img id="jirengaucheinitialavance" src="perso/gauchejiren/initialavance.png" alt=""/>
-            <img id="jirengaucheinitialblock" src="perso/gauchejiren/initialblock.png" alt=""/>
-            <img id="jirengaucheinitialbouclier" src="perso/gauchejiren/initialbouclier.png" alt=""/>
-            <img id="jirengaucheinitialdaka1" src="perso/gauchejiren/initialdaka1.png" alt=""/>
-            <img id="jirengaucheinitialdaka2" src="perso/gauchejiren/initialdaka2.png" alt=""/>
-            <img id="jirengaucheinitialdaka3" src="perso/gauchejiren/initialdaka3.png" alt=""/>
-            <img id="jirengaucheinitialdescend" src="perso/gauchejiren/initialdescend.png" alt=""/>
-            <img id="jirengaucheinitialmultiplepunch" src="perso/gauchejiren/initialmultiplepunch.png" alt=""/>
-            <img id="jirengaucheinitialpouvoir" src="perso/gauchejiren/initialpouvoir.png" alt=""/>
-            <img id="jirengaucheinitialretour" src="perso/gauchejiren/initialretour.png" alt=""/>
-            <img id="jirengaucheinitialtotondry1" src="perso/gauchejiren/initialtotondry1.png" alt=""/>
-            <img id="jirengaucheinitialtotondry2" src="perso/gauchejiren/initialtotondry2.png" alt=""/>
-            <img id="jirengaucheinitialtouchedbehind" src="perso/gauchejiren/initialtouchedbehind.png" alt=""/>
-            <img id="jirengaucheinitialtouchedmiddle" src="perso/gauchejiren/initialtouchedmiddle.png" alt=""/>
-            <img id="jirengaucheinitialtouchedtop" src="perso/gauchejiren/initialtouchedtop.png" alt=""/>
-            <img id="jirengaucheinitial" src="perso/gauchejiren/initial.png" alt=""/>
-            <img id="jirendroiteinitialairpouvoir" src="perso/droitejiren/initialairpouvoir.png" alt=""/>
+            <img id="jirendroiteinitialairpouvoirjiren" src="perso/droitejiren/initialairpouvoirjiren.png" alt=""/>
             <img id="jirendroiteinitialairtransformation" src="perso/droitejiren/initialairtransformation.png" alt=""/>
             <img id="jirendroiteinitialair" src="perso/droitejiren/initialair.png" alt=""/>
             <img id="jirendroiteinitialavance" src="perso/droitejiren/initialavance.png" alt=""/>
@@ -229,35 +159,78 @@
             <img id="jirendroiteinitialdaka3" src="perso/droitejiren/initialdaka3.png" alt=""/>
             <img id="jirendroiteinitialdescend" src="perso/droitejiren/initialdescend.png" alt=""/>
             <img id="jirendroiteinitialmultiplepunch" src="perso/droitejiren/initialmultiplepunch.png" alt=""/>
-            <img id="jirendroiteinitialpouvoir" src="perso/droitejiren/initialpouvoir.png" alt=""/>
+            <img id="jirendroiteinitialmultiplepunchchargement" src="perso/droitejiren/initialmultiplepunchchargement.png" alt=""/>
+            <img id="jirendroiteinitialpouvoirjiren" src="perso/droitejiren/initialpouvoirjiren.png" alt=""/>
             <img id="jirendroiteinitialretour" src="perso/droitejiren/initialretour.png" alt=""/>
             <img id="jirendroiteinitialtotondry1" src="perso/droitejiren/initialtotondry1.png" alt=""/>
             <img id="jirendroiteinitialtotondry2" src="perso/droitejiren/initialtotondry2.png" alt=""/>
             <img id="jirendroiteinitialtouchedbehind" src="perso/droitejiren/initialtouchedbehind.png" alt=""/>
             <img id="jirendroiteinitialtouchedmiddle" src="perso/droitejiren/initialtouchedmiddle.png" alt=""/>
             <img id="jirendroiteinitialtouchedtop" src="perso/droitejiren/initialtouchedtop.png" alt=""/>
+            <img id="jirendroiteinitialtransformation" src="perso/droitejiren/initialtransformation.png" alt=""/>
+            <img id="jirengaucheinitial" src="perso/gauchejiren/initial.png" alt=""/>
+            <img id="jirengaucheinitialairpouvoirjiren" src="perso/gauchejiren/initialairpouvoirjiren.png" alt=""/>
+            <img id="jirengaucheinitialairtransformation" src="perso/gauchejiren/initialairtransformation.png" alt=""/>
+            <img id="jirengaucheinitialair" src="perso/gauchejiren/initialair.png" alt=""/>
+            <img id="jirengaucheinitialavance" src="perso/gauchejiren/initialavance.png" alt=""/>
+            <img id="jirengaucheinitialblock" src="perso/gauchejiren/initialblock.png" alt=""/>
+            <img id="jirengaucheinitialbouclier" src="perso/gauchejiren/initialbouclier.png" alt=""/>
+            <img id="jirengaucheinitialdaka1" src="perso/gauchejiren/initialdaka1.png" alt=""/>
+            <img id="jirengaucheinitialdaka2" src="perso/gauchejiren/initialdaka2.png" alt=""/>
+            <img id="jirengaucheinitialdaka3" src="perso/gauchejiren/initialdaka3.png" alt=""/>
+            <img id="jirengaucheinitialdescend" src="perso/gauchejiren/initialdescend.png" alt=""/>
+            <img id="jirengaucheinitialmultiplepunch" src="perso/gauchejiren/initialmultiplepunch.png" alt=""/>
+            <img id="jirengaucheinitialmultiplepunchchargement" src="perso/gauchejiren/initialmultiplepunchchargement.png" alt=""/>
+            <img id="jirengaucheinitialpouvoirjiren" src="perso/gauchejiren/initialpouvoirjiren.png" alt=""/>
+            <img id="jirengaucheinitialretour" src="perso/gauchejiren/initialretour.png" alt=""/>
+            <img id="jirengaucheinitialtotondry1" src="perso/gauchejiren/initialtotondry1.png" alt=""/>
+            <img id="jirengaucheinitialtotondry2" src="perso/gauchejiren/initialtotondry2.png" alt=""/>
+            <img id="jirengaucheinitialtouchedbehind" src="perso/gauchejiren/initialtouchedbehind.png" alt=""/>
+            <img id="jirengaucheinitialtouchedmiddle" src="perso/gauchejiren/initialtouchedmiddle.png" alt=""/>
+            <img id="jirengaucheinitialtouchedtop" src="perso/gauchejiren/initialtouchedtop.png" alt=""/>
+            <img id="jirengaucheinitialtransformation" src="perso/gauchejiren/initialtransformation.png" alt=""/>
         </div>
         
-        <img class="p" id="p1" src="pouvoir/pouvoir1gauche.png" alt="" style="animation: pouvoir1 1s;"/>
-        <img class="p" id="p2" src="pouvoir/pouvoir2gauche.png" alt="" style="animation: pouvoir2 1s;"/>
-        <img class="p" id="p3" src="pouvoir/pouvoir3gauche.png" alt="" style="animation: pouvoir3 1s;"/>
-        <img class="p" id="p4" src="pouvoir/pouvoir4gauche.png" alt="" style="animation: pouvoir4 1s;"/>
-        <img class="p" id="p5" src="pouvoir/pouvoir5gauche.png" alt="" style="animation: pouvoir5 1s;"/>
-        <img class="p" id="p6" src="pouvoir/pouvoir6gauche.png" alt="" style="animation: pouvoir6 1s;"/>
-        <img class="p" id="p7" src="pouvoir/pouvoir7gauche.png" alt="" style="animation: pouvoir7 1s;"/>
-        <img class="p" id="p8" src="pouvoir/pouvoir8gauche.png" alt="" style="animation: pouvoir8 1s;"/>
-        <img class="p" id="p9" src="pouvoir/pouvoir9gauche.png" alt="" style="animation: pouvoir9 1s;"/>
-        <img class="p" id="p10" src="pouvoir/pouvoir10gauche.png" alt="" style="animation: pouvoir10 1s;"/>
-        <img class="p" id="pj1" src="pouvoir/pouvoirjiren1.png" alt="" style="animation: pouvoirjiren1 1s;"/>
-        <img class="p" id="pj2" src="pouvoir/pouvoirjiren2.png" alt="" style="animation: pouvoirjiren2 1s;"/>
-        <img class="p" id="pj3" src="pouvoir/pouvoirjiren3.png" alt="" style="animation: pouvoirjiren3 1s;"/>
-        <img class="p" id="pj4" src="pouvoir/pouvoirjiren4.png" alt="" style="animation: pouvoirjiren4 1s;"/>
-        <img class="p" id="pj5" src="pouvoir/pouvoirjiren5.png" alt="" style="animation: pouvoirjiren5 1s;"/>
-        <img class="p" id="pj6" src="pouvoir/pouvoirjiren6.png" alt="" style="animation: pouvoirjiren6 1s;"/>
-        <img class="p" id="pj7" src="pouvoir/pouvoirjiren7.png" alt="" style="animation: pouvoirjiren7 1s;"/>
-        <img class="p" id="pj8" src="pouvoir/pouvoirjiren8.png" alt="" style="animation: pouvoirjiren8 1s;"/>
-        <img class="p" id="pj9" src="pouvoir/pouvoirjiren9.png" alt="" style="animation: pouvoirjiren9 1s;"/>
-        <img class="p" id="pj10" src="pouvoir/pouvoirjiren10.png" alt="" style="animation: pouvoirjiren10 1s;"/>
+        <img class="p" id="pouvoirgauche1" src="pouvoir/pouvoirgauche1.png" alt="" style="animation: pouvoir1 1s;"/>
+        <img class="p" id="pouvoirgauche2" src="pouvoir/pouvoirgauche2.png" alt="" style="animation: pouvoir2 1s;"/>
+        <img class="p" id="pouvoirgauche3" src="pouvoir/pouvoirgauche3.png" alt="" style="animation: pouvoir3 1s;"/>
+        <img class="p" id="pouvoirgauche4" src="pouvoir/pouvoirgauche4.png" alt="" style="animation: pouvoir4 1s;"/>
+        <img class="p" id="pouvoirgauche5" src="pouvoir/pouvoirgauche5.png" alt="" style="animation: pouvoir5 1s;"/>
+        <img class="p" id="pouvoirgauche6" src="pouvoir/pouvoirgauche6.png" alt="" style="animation: pouvoir6 1s;"/>
+        <img class="p" id="pouvoirgauche7" src="pouvoir/pouvoirgauche7.png" alt="" style="animation: pouvoir7 1s;"/>
+        <img class="p" id="pouvoirgauche8" src="pouvoir/pouvoirgauche8.png" alt="" style="animation: pouvoir8 1s;"/>
+        <img class="p" id="pouvoirgauche9" src="pouvoir/pouvoirgauche9.png" alt="" style="animation: pouvoir9 1s;"/>
+        <img class="p" id="pouvoirgauche10" src="pouvoir/pouvoirgauche10.png" alt="" style="animation: pouvoir10 1s;"/>
+        <img class="p" id="pouvoirdroite1" src="pouvoir/pouvoirdroite1.png" alt="" style="animation: pouvoir1 1s;"/>
+        <img class="p" id="pouvoirdroite2" src="pouvoir/pouvoirdroite2.png" alt="" style="animation: pouvoir2 1s;"/>
+        <img class="p" id="pouvoirdroite3" src="pouvoir/pouvoirdroite3.png" alt="" style="animation: pouvoir3 1s;"/>
+        <img class="p" id="pouvoirdroite4" src="pouvoir/pouvoirdroite4.png" alt="" style="animation: pouvoir4 1s;"/>
+        <img class="p" id="pouvoirdroite5" src="pouvoir/pouvoirdroite5.png" alt="" style="animation: pouvoir5 1s;"/>
+        <img class="p" id="pouvoirdroite6" src="pouvoir/pouvoirdroite6.png" alt="" style="animation: pouvoir6 1s;"/>
+        <img class="p" id="pouvoirdroite7" src="pouvoir/pouvoirdroite7.png" alt="" style="animation: pouvoir7 1s;"/>
+        <img class="p" id="pouvoirdroite8" src="pouvoir/pouvoirdroite8.png" alt="" style="animation: pouvoir8 1s;"/>
+        <img class="p" id="pouvoirdroite9" src="pouvoir/pouvoirdroite9.png" alt="" style="animation: pouvoir9 1s;"/>
+        <img class="p" id="pouvoirdroite10" src="pouvoir/pouvoirdroite10.png" alt="" style="animation: pouvoir10 1s;"/>
+        <img class="p" id="pouvoirjirendroite1" src="pouvoir/pouvoirjirendroite1.png" alt="" style="animation: pouvoirjiren1 1s;"/>
+        <img class="p" id="pouvoirjirendroite2" src="pouvoir/pouvoirjirendroite2.png" alt="" style="animation: pouvoirjiren2 1s;"/>
+        <img class="p" id="pouvoirjirendroite3" src="pouvoir/pouvoirjirendroite3.png" alt="" style="animation: pouvoirjiren3 1s;"/>
+        <img class="p" id="pouvoirjirendroite4" src="pouvoir/pouvoirjirendroite4.png" alt="" style="animation: pouvoirjiren4 1s;"/>
+        <img class="p" id="pouvoirjirendroite5" src="pouvoir/pouvoirjirendroite5.png" alt="" style="animation: pouvoirjiren5 1s;"/>
+        <img class="p" id="pouvoirjirendroite6" src="pouvoir/pouvoirjirendroite6.png" alt="" style="animation: pouvoirjiren6 1s;"/>
+        <img class="p" id="pouvoirjirendroite7" src="pouvoir/pouvoirjirendroite7.png" alt="" style="animation: pouvoirjiren7 1s;"/>
+        <img class="p" id="pouvoirjirendroite8" src="pouvoir/pouvoirjirendroite8.png" alt="" style="animation: pouvoirjiren8 1s;"/>
+        <img class="p" id="pouvoirjirendroite9" src="pouvoir/pouvoirjirendroite9.png" alt="" style="animation: pouvoirjiren9 1s;"/>
+        <img class="p" id="pouvoirjirendroite10" src="pouvoir/pouvoirjirendroite10.png" alt="" style="animation: pouvoirjiren10 1s;"/>
+        <img class="p" id="pouvoirjirengauche1" src="pouvoir/pouvoirjirengauche1.png" alt="" style="animation: pouvoirjiren1 1s;"/>
+        <img class="p" id="pouvoirjirengauche2" src="pouvoir/pouvoirjirengauche2.png" alt="" style="animation: pouvoirjiren2 1s;"/>
+        <img class="p" id="pouvoirjirengauche3" src="pouvoir/pouvoirjirengauche3.png" alt="" style="animation: pouvoirjiren3 1s;"/>
+        <img class="p" id="pouvoirjirengauche4" src="pouvoir/pouvoirjirengauche4.png" alt="" style="animation: pouvoirjiren4 1s;"/>
+        <img class="p" id="pouvoirjirengauche5" src="pouvoir/pouvoirjirengauche5.png" alt="" style="animation: pouvoirjiren5 1s;"/>
+        <img class="p" id="pouvoirjirengauche6" src="pouvoir/pouvoirjirengauche6.png" alt="" style="animation: pouvoirjiren6 1s;"/>
+        <img class="p" id="pouvoirjirengauche7" src="pouvoir/pouvoirjirengauche7.png" alt="" style="animation: pouvoirjiren7 1s;"/>
+        <img class="p" id="pouvoirjirengauche8" src="pouvoir/pouvoirjirengauche8.png" alt="" style="animation: pouvoirjiren8 1s;"/>
+        <img class="p" id="pouvoirjirengauche9" src="pouvoir/pouvoirjirengauche9.png" alt="" style="animation: pouvoirjiren9 1s;"/>
+        <img class="p" id="pouvoirjirengauche10" src="pouvoir/pouvoirjirengauche10.png" alt="" style="animation: pouvoirjiren10 1s;"/>
         <img class="p" id="kamehamehaanim" src="pouvoir/kamehamehaanimation.png" alt=""/>
         <img class="p" id="kamehamehacharge" src="pouvoir/kamehamehachargement.png" alt=""/>
         <img class="p" id="kamehamehagauche1" src="pouvoir/kamehamehagauche1.png" alt=""/>
