Complete all perso actions

--- a/index.html
+++ b/index.html
@@ -231,8 +231,7 @@
         <img class="p" id="pouvoirjirengauche8" src="pouvoir/pouvoirjirengauche8.png" alt="" style="animation: pouvoirjiren8 1s;"/>
         <img class="p" id="pouvoirjirengauche9" src="pouvoir/pouvoirjirengauche9.png" alt="" style="animation: pouvoirjiren9 1s;"/>
         <img class="p" id="pouvoirjirengauche10" src="pouvoir/pouvoirjirengauche10.png" alt="" style="animation: pouvoirjiren10 1s;"/>
-        <img class="p" id="kamehamehaanim" src="pouvoir/kamehamehaanimation.png" alt=""/>
-        <img class="p" id="kamehamehacharge" src="pouvoir/kamehamehachargement.png" alt=""/>
+        <img class="a" id="kamehamehaanimation" src="pouvoir/kamehamehaanimation.png" alt=""/>
         <img class="p" id="kamehamehagauche1" src="pouvoir/kamehamehagauche1.png" alt=""/>
         <img class="p" id="kamehamehagauche2" src="pouvoir/kamehamehagauche2.png" alt=""/>
         <img class="p" id="kamehamehagauche3" src="pouvoir/kamehamehagauche3.png" alt=""/>
@@ -250,6 +249,8 @@
         <div id="fight"></div>
         <div id="c">fb: Hidekela</div>
     </body>
+    <script src="functions.js"></script>
+    <script src="animationPouvoir.js"></script>
     <script src="controller.js"></script>
     <script src="personnage.js"></script>
     <script src="index.js"></script>
