Complete game base for 2 players

--- a/index.html
+++ b/index.html
@@ -16,19 +16,20 @@
     </style>
     <body>
         <p></p>
+        <img id="terrain" src="terrain/terrain.jpg" alt=""/>
         <img id="avatargoku" src="avatar/initialgoku.png" alt=""/>
         <img id="avatarjiren" src="avatar/initialjiren.png" alt=""/>
         <div id="barre_de_vie_goku">
-            <div id="vie_restant_goku"></div>
+            <div id="vie_restante_goku"></div>
         </div>
         <div id="barre_d_energie_goku">
-            <div id="energie_restant_goku"></div>
+            <div id="energie_restante_goku"></div>
         </div>
         <div id="barre_de_vie_jiren">
-            <div id="vie_restant_jiren"></div>
+            <div id="vie_restante_jiren"></div>
         </div>
         <div id="barre_d_energie_jiren">
-            <div id="energie_restant_jiren"></div>
+            <div id="energie_restante_jiren"></div>
         </div>
         <div id="goku">
             <img style="display: inline;" id="gokugaucheinitial" src="perso/gauchegoku/initial.png" alt=""/>
