--- a/index.html
+++ b/index.html
@@ -252,7 +252,11 @@
                 <li><button id="quit_button" type="button">QUIT</button></li>
             </ul>
         </section>
-        <section id="command_page" style="display:block;">
+        <section id="ready_game_page">
+            <p id="ready_text">READY</p>
+            <p id="fight_text">FIGHT</p>
+        </section>
+        <section id="command_page">
             <div>
                 <h2>GOKU</h2>
                 <table>
@@ -354,9 +358,21 @@
     <script src="personnage.js"></script>
     <script src="index.js"></script>
     <script>
+        var startGame = function()
+        {
+            game.reinit();
+            document.getElementById('ready_game_page').style = "display: block";
+            document.getElementById('ready_text').style = "animation: ready_text_animation 2.5s;";
+            document.getElementById('fight_text').style = "animation: fight_text_animation 0.5s 2.5s;";
+            setTimeout(function(){
+                document.getElementById('ready_game_page').style = "";
+                game.start();
+            },3000);
+        }
+        
         document.getElementById('play_button').addEventListener('click',function(e){
             document.getElementById('menu_page').style = "top: -120%; transition: top 0.5s";
-            game.start();
+            startGame();
         },false);
 
         document.getElementById('command_button').addEventListener('click',function(e){
@@ -375,7 +391,7 @@
             document.getElementById('win_page').style = "top: -120%; opacity: 0; transition: top 0.5s, opacity 1s";
             document.getElementById('winner').style = "";
             document.getElementById('restart_menu').style = "display: none";
-            game.start();
+            startGame();
         },false);
         
         document.getElementById('menu_button').addEventListener('click',function(e){
