Rectify <head> in index.html

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
     <head>
         <meta charset="utf-8"/>
-        <meta name="google-site-verification" content="xw546myTrpydQoJ6kzIOwKp31fGMBZLYHAWos8VFNk8" />
+        <meta name="google-site-verification" content=""/>
         <meta name="description" content="Un petit jeu de Dragon Ball Super fait avec le language Javascript, sans la balise Canvas mais avec des images! ;)"/>
         <meta name="keywords" content="jeu, jeux, dbs, db, dbz, game, javascript, game online, online game, games, dragon ball, dragon ball super, son goku, jiren, jeu en ligne, jeu javascript, jeu js, sans canvas, jeu dbs, js" />
         <link rel="stylesheet" href="style.css"/>
         <link rel="icon" href="dbs.png"/>
-        <title>Dbs - Game</title>
+        <title>Goku VS Jiren - Game</title>
     </head>
     <body>
         <section id="game_page">
