Add synopsis and fixing relative position in begining

--- a/index.html
+++ b/index.html
@@ -246,11 +246,14 @@
         </section>
         <section id="menu_page" style="display:block">
             <h1>GOKU VS JIREN</h1>
-            <ul>
-                <li><button id="play_button" type="button">PLAY</button></li>
-                <li><button id="command_button" type="button">COMMAND</button></li>
-                <li><button id="quit_button" type="button">QUIT</button></li>
-            </ul>
+            <div>
+                <ul>
+                    <li><button id="play_button" type="button">PLAY</button></li>
+                    <li><button id="command_button" type="button">COMMAND</button></li>
+                    <li><button id="quit_button" type="button">QUIT</button></li>
+                </ul>
+                <p id="synopsis_text"><span class="underlined">Synopsis</span> : After the Tournament of Power, Songoku and Jiren face off again. Both are looking to get stronger and stronger. Their previous fight gives them insight into each other's techniques and weakness. They can both win. However, only one will emerge victorious. So who will it be?</p>
+            </div>
         </section>
         <section id="ready_game_page">
             <p id="ready_text">READY</p>
